--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 
 <script>
-text = prompt ("Are you a student or a parent? Pleace enter student or parent")
+text = prompt ("Please tell me whether you are a student or a parent? Pleace enter student or parent")
 
 
 if (text === "student") {
